adicicoes de layout, adicionado pagina de lista de mensagem e post

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -29,5 +29,9 @@
         </ion-item>
       
       </ion-list> 
+      <ion-item>
+        <ion-label stacked>Lembrar</ion-label>
+        <ion-checkbox color= "blue"> </ion-checkbox>
+      </ion-item>
       <button ion-button block (click)="openUserLogin()">Login</button>
 </ion-content>
