--- a/src/pages/user/user.html
+++ b/src/pages/user/user.html
@@ -13,8 +13,7 @@
 
 <ion-content padding>
   
-  <p>A R
-    </p>
+  <p (click)="openAlterarFoto()">A R</p>
     <strong>Ana Ramos</strong>
     <ion-card>
         <ion-card-header>
@@ -22,8 +21,7 @@
         </ion-card-header>
         <ion-card-content>
           The British use the term "header", but the American term "head-shot" the English simply refuse to adopt.
-          <ion-label>Date</ion-label>
-          <ion-datetime displayFormat="MM/DD/YYYY" [(ngModel)]="myDate"></ion-datetime>
+          
         </ion-card-content>
       </ion-card>
 
