--- a/src/pages/user/user.html
+++ b/src/pages/user/user.html
@@ -12,9 +12,11 @@
 </ion-header>
 
 <ion-content padding>
-  
+    
   <p (click)="openAlterarFoto()">A R</p>
+  
     <strong>Ana Ramos</strong>
+  
     <ion-card>
         <ion-card-header>
           Header
@@ -28,6 +30,7 @@
 
     <button ion-button block (click)="openMensagens()">Mensagens</button>
     <button ion-button block (click)="openPosts()">Posts</button>
-    <button ion-button block (click)="backToLogin()">LOGOUT</button>
+    
+    <button ion-button block (click)="backToLogin()" id= "botaologout">LOGOUT</button>
 
 </ion-content>
