--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -14,7 +14,6 @@
 
 
 <ion-content padding> 
-
   <img src="assets/imgs/logo.png">
     <ion-list>
       
@@ -33,5 +32,5 @@
         <ion-label stacked>Lembrar</ion-label>
         <ion-checkbox color= "blue"> </ion-checkbox>
       </ion-item>
-      <button ion-button block (click)="openUserLogin()">Login</button>
+      <button ion-button block (click)="openUserLogin()"id="botao-login">Login</button>
 </ion-content>
