alteracoes de layout e criacao de componente

--- a/src/pages/user/user.html
+++ b/src/pages/user/user.html
@@ -26,11 +26,11 @@
     
     <ion-card class="card-perfil">
         <ion-card-header>
-         <strong> Header</strong>
+         <strong> {{posts[0].tituloPost}}</strong>
         </ion-card-header>
         <ion-card-content>
-          The British use the term "header", but the American term "head-shot" the English simply refuse to adopt.
-          <h4 id = "data-perfil">11/01/2019</h4>
+          {{posts[0].post}}
+          <h4 id = "data-perfil">11/01/2019 12:50</h4>
         </ion-card-content>
         
       </ion-card>
