--- a/src/pages/exibir-mensagem/exibir-mensagem.html
+++ b/src/pages/exibir-mensagem/exibir-mensagem.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>exibir Mensagem</ion-title>
+    <ion-title>Mensagem</ion-title>
   </ion-navbar>
 
 </ion-header>
