--- a/src/pages/exibir-post/exibir-post.html
+++ b/src/pages/exibir-post/exibir-post.html
@@ -4,27 +4,12 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
 
-  <ion-navbar>
-    <ion-title>exibirPost</ion-title>
-  </ion-navbar>
-
-</ion-header>
 
 
 <ion-content padding>
 
-
-
-    <ion-card *ngIf="post" class="card-perfil">
-        <ion-card-header>
-          {{post.tituloPost}}
-        </ion-card-header>
-        <ion-card-content>
-          {{post.post}}
-          <h4 id = "data-perfil">11/01/2019</h4>
-        </ion-card-content>
-      </ion-card>
+  
+      <detalhes [meuTitulo]="post.tituloPost" [meuAutor]="post.autor" [minhaData] = "post.dataPublicacao" [meuPost] ="post.post"></detalhes>
 
 </ion-content>
