comunicacao com o servidor sendo feita

--- a/src/pages/user/user.html
+++ b/src/pages/user/user.html
@@ -28,7 +28,7 @@
 
       <ion-list (click)="openExibirPost(posts)">
 
-          <post [meuTitulo] = "posts.tituloPost" [meuPost] = "posts.post" [minhaData] = "posts.dataPublicacao"></post>
+          <post [meuTitulo] = "posts.titulo" [meuPost] = "posts.mensagem" [minhaData] = "posts.data"></post>
 
         
     </ion-list>
