--- a/src/pages/exibir-post/exibir-post.html
+++ b/src/pages/exibir-post/exibir-post.html
@@ -23,8 +23,8 @@
       <div class="item item-text-wrap">
           
           <h6>Autor: {{post.autor}}</h6>
-          <h6>Data da Publicacao: {{post.dataPublicacao}} {{post.horario}}</h6>
-          <p>{{post.post}}</p>
+          <h6>Data da Publicacao: {{post.data}}</h6>
+          <p>{{post.mensagem}}</p>
       </div>
     </div>
 
