mudancas no layout na pagina de alterar foto e comunicacao com o servidor com o ultimo post

--- a/src/pages/alterar-foto/alterar-foto.html
+++ b/src/pages/alterar-foto/alterar-foto.html
@@ -23,12 +23,8 @@
       
       <ion-footer>
           <ion-title>
-            <button ion-button>
-                <ion-icon name="camera"></ion-icon>
-              </button>
-              <button class="right-button" ion-button icon-end>
-              <ion-icon name="images"></ion-icon>
-            </button>
+                <ion-icon id="icon1" name="camera"></ion-icon>
+              <ion-icon id="icon2" name="images"></ion-icon> 
           </ion-title>
       </ion-footer>
 
