adicionado storage no login do usuario, a lista de mensagem com o id do usuario

--- a/src/pages/exibir-mensagem/exibir-mensagem.html
+++ b/src/pages/exibir-mensagem/exibir-mensagem.html
@@ -16,11 +16,8 @@
 <ion-content padding>
 
     <ion-card *ngIf="exibir">
-        <ion-card-header>
-          {{exibir.nome}}
-        </ion-card-header>
         <ion-card-content>
-          {{exibir.msg}}
+          {{exibir}}
         </ion-card-content>
       </ion-card>
 
