--- a/src/pages/mensagens/mensagens.html
+++ b/src/pages/mensagens/mensagens.html
@@ -21,13 +21,13 @@
       {{ item }}
     </ion-item>
   </ion-list>
-
-  <ion-list *ngFor="let item of listaMensagem">
-      <ion-item (click)="openExibirMensagem(item)">
-        <h2>{{item.nome}}</h2>
-        <p>{{item.msg}}</p>
+<div >
+  <ion-list *ngIf="message != null">
+      <ion-item *ngFor="let item of message" (click)="openExibirMensagem(item)">
+        <h2>{{item}}</h2> 
+        <p></p>
       </ion-item>
     </ion-list> 
-
+  </div>
 
 </ion-content>
