--- a/src/pages/exibir-post/exibir-post.html
+++ b/src/pages/exibir-post/exibir-post.html
@@ -13,7 +13,7 @@
   <ion-header>
 
     <ion-navbar>
-      <ion-title>{{post.tituloPost}}</ion-title>
+      <ion-title>{{post.titulo}}</ion-title>
     </ion-navbar>
   
   </ion-header>
@@ -22,9 +22,9 @@
   <div class="card" *ngIf="post"> 
       <div class="item item-text-wrap">
           
-          <h6>Autor: {{post.autor}}</h6>
-          <h6>Data da Publicacao: {{post.data}}</h6>
-          <p >{{post.mensagem}}</p>
+          Autor: {{post.autor}} <br>
+          Publicacao: {{post.data}} <br>
+          {{post.mensagem}}
       </div>
     </div>
 
