mudanca na implementacao da rotacao da tela e teclado no formato tel em senha

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -25,7 +25,7 @@
       
         <ion-item> 
           <ion-label stacked>Password</ion-label>
-          <ion-input type="number"  minlength="4" maxlength="10" style="-webkit-text-security:disc;"  #password (ionChange)='onChangeTime(username.value, password.value)' ></ion-input>
+          <ion-input type="tel"  minlength="4" maxlength="10" style="-webkit-text-security:disc;"  #password (ionChange)='onChangeTime(username.value, password.value)' ></ion-input>
         </ion-item>
 
       </ion-list> 
