adicionado foto de perfil com sigla

--- a/src/pages/user/user.html
+++ b/src/pages/user/user.html
@@ -17,7 +17,7 @@
     <ion-list >
         <ion-item (click)="openAlterarFoto()">
           <ion-avatar item-start  >
-            <img src="assets/imgs/perfil.png">
+            <h4> {{sigla}}</h4>
           </ion-avatar>
           <div *ngIf="user!=null">
           <h2>{{user.nome}}</h2>
