correcao de erros de camera

--- a/src/pages/alterar-foto/alterar-foto.html
+++ b/src/pages/alterar-foto/alterar-foto.html
@@ -24,8 +24,8 @@
       
       <ion-footer>
           <ion-title> 
-                <ion-icon id="icon1" name="camera" (click)="takePicture(photo)"></ion-icon>
-              <ion-icon id="icon2" name="images" (click)="takePicture()"></ion-icon> 
+                <ion-icon id="icon1" name="camera" (click)="takePicture('foto')"></ion-icon>
+              <ion-icon id="icon2" name="images" (click)="takePicture('galery')"></ion-icon> 
           </ion-title>
       </ion-footer>
 
