--- a/src/pages/user/user.html
+++ b/src/pages/user/user.html
@@ -18,7 +18,7 @@
         <ion-item (click)="openAlterarFoto()">
           <ion-avatar item-start  >
             <h4 *ngIf="photo == null"> {{sigla}}</h4>
-            <img *ngIf="photo != null" src="{{ photo }}" />
+            <img id="foto" *ngIf="photo != null" src="{{ photo }}" />
           </ion-avatar>
           <div *ngIf="user!=null">
           <h2>{{user.nome}}</h2>
